# mtg-ocr

./: .gitignore  pyproject.toml
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
docs/plans/: phase1-2-foundation.md  phase3-4-export-cli.md
docs/plans/completed/: phase1-2-foundation.md
scripts/: compute_embeddings.py  prepare_training_data.py
src/mtg_ocr/: __main__.py  pipeline.py
src/mtg_ocr/benchmark/: difficult.py  runner.py
src/mtg_ocr/data/: models.py  scryfall.py
src/mtg_ocr/detection/: card_detector.py
src/mtg_ocr/embeddings/: builder.py  quantize.py
src/mtg_ocr/encoder/: base.py  mobileclip.py
src/mtg_ocr/export/: __init__.py  coreml_export.py  onnx_export.py
src/mtg_ocr/models/: card.py
src/mtg_ocr/scanning/: __init__.py  batch.py
src/mtg_ocr/search/: similarity.py
src/mtg_ocr/training/: augmentation.py  dataset.py
tests/fixtures/: create_synthetic_card.py  ground_truth.json
tests/fixtures/difficult/: generate.py
tests/unit/: test_batch_scanner.py  test_benchmark.py  test_cli.py  test_coreml_export.py  test_detection.py  test_difficult_conditions.py  test_dimension_reduction.py  test_embeddings.py  test_encoder.py  test_onnx_export.py  test_pipeline.py  test_project_structure.py  test_scryfall.py  test_search.py  test_training.py
